--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
+
+flutter_icons:
+  image_path: "assets/images/diseasefinal.jpg" 
+  android: true
+  ios: true
 
 
 # For information on the generic Dart part of this file, see the
