--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/mohakgupta/Library/Android/sdk
-flutter.sdk=/Users/mohakgupta/Desktop/flutter/flutter
+sdk.dir=/Users/uk/Library/Android/sdk
+flutter.sdk=/Users/uk/development/flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
